versions/v2.15/modules/de/pages/rancher-admin/global-configuration/rke1-templates/enforce-templates.adoc
= Vorlagen durchsetzen
:page-languages: [en, de, es, fr, ja, pt, zh]
:revdate: 2025-08-05
:page-revdate: {revdate}
:community-path: how-to-guides/new-user-guides/authentication-permissions-and-global-configuration/about-rke1-templates/enforce-templates.adoc 
:product-path: rancher-admin/global-configuration/rke1-templates/enforce-templates.adoc
ifeval::["{build-type}" != "community"]
:xref-global-permissions: xref:rancher-admin/users/authn-and-authz/manage-role-based-access-control-rbac/global-permissions.adoc
:xref-manage-rke1-templates: xref:rancher-admin/global-configuration/rke1-templates/manage-templates.adoc
endif::[]
ifeval::["{build-type}" == "community"]
:xref-global-permissions: xref:how-to-guides/new-user-guides/authentication-permissions-and-global-configuration/manage-role-based-access-control-rbac/global-permissions.adoc 
:xref-manage-rke1-templates: xref:how-to-guides/new-user-guides/authentication-permissions-and-global-configuration/about-rke1-templates/manage-rke1-templates.adoc
endif::[]

In diesem Abschnitt wird beschrieben, wie Vorlagenadministratoren Vorlagen in Rancher durchsetzen können, um die Möglichkeit der Benutzer einzuschränken, Cluster ohne eine Vorlage zu erstellen.

Standardmäßig kann jeder Standardbenutzer in Rancher Cluster erstellen. Wenn jedoch die Durchsetzung von RKE-Vorlagen aktiviert ist,

* hat nur ein Administrator die Möglichkeit, Cluster ohne eine Vorlage zu erstellen.
* Alle Standardbenutzer müssen eine RKE-Vorlage verwenden, um einen neuen Cluster zu erstellen.
* Standardbenutzer können keinen Cluster erstellen, ohne eine Vorlage zu verwenden.

Benutzer können nur neue Vorlagen erstellen, wenn der Administrator xref:./creator-permissions.adoc#_allowing_a_user_to_create_templates[ihnen die Erlaubnis erteilt.]

Nachdem ein Cluster mit einer RKE-Vorlage erstellt wurde, kann der Clusterersteller die in der Vorlage definierten Einstellungen nicht bearbeiten. Der einzige Weg, diese Einstellungen nach der Erstellung des Clusters zu ändern, besteht darin, xref:./apply-templates.adoc#_updating_a_cluster_created_with_an_rke_template[den Cluster auf eine neue Revision] derselben Vorlage zu upgraden. Wenn Clusterersteller die von der Vorlage definierten Einstellungen ändern möchten, müssen sie den Vorlageninhaber kontaktieren, um eine neue Revision der Vorlage zu erhalten. Für Details, wie Vorlagenrevisionen funktionieren, siehe die {xref-manage-rke1-templates}#_updating_a_template[Dokumentation zur Überarbeitung von Vorlagen.]

[#_requiring_new_clusters_to_use_an_rke_template]
== Erforderliche Verwendung einer RKE-Vorlage für neue Cluster

Sie möchten möglicherweise verlangen, dass neue Cluster eine Vorlage verwenden, um sicherzustellen, dass jeder Cluster, der von einem {xref-global-permissions}[Standardbenutzer] gestartet wird, die von den Administratoren geprüften Kubernetes- und/oder Rancher-Einstellungen verwendet.

Um zu verlangen, dass neue Cluster eine RKE-Vorlage verwenden, können Administratoren die Durchsetzung von RKE-Vorlagen mit den folgenden Schritten aktivieren:

. Klicken Sie auf *☰ > Globale Einstellungen*.
. Wechseln Sie zu der `cluster-template-enforcement` Einstellung. Klicken Sie auf *⋮ > Einstellung bearbeiten*.
. Setzen Sie den Wert auf *True* und klicken Sie auf *Speichern*.
+

[NOTE]
.Wichtig:
====
Wenn der Administrator die `cluster-template-enforcement` auf *True* setzt, muss er auch die `clusterTemplates` mit den Benutzern teilen, damit diese eine dieser Vorlagen auswählen können, um den Cluster zu erstellen.
====


*Ergebnis:* Alle von Rancher bereitgestellten Cluster müssen eine Vorlage verwenden, es sei denn, der Ersteller ist ein Administrator.

[#_disabling_rke_template_enforcement]
== Deaktivierung der RKE-Vorlagen-Durchsetzung

Um die Erstellung neuer Cluster ohne eine RKE-Vorlage zu ermöglichen, können Administratoren die RKE-Vorlagen-Durchsetzung mit den folgenden Schritten deaktivieren:

. Klicken Sie auf *☰ > Globale Einstellungen*.
. Wechseln Sie zu der `cluster-template-enforcement` Einstellung. Klicken Sie auf *⋮ > Einstellung bearbeiten*.
. Setzen Sie den Wert auf *False* und klicken Sie auf *Speichern*.

*Ergebnis:* Wenn Cluster von Rancher bereitgestellt werden, müssen sie keine Vorlage verwenden.
